feat: update featureFlags service

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "3.758.0",
     "@aws-sdk/s3-request-presigner": "3.758.0",
+    "@drdgvhbh/postgres-error-codes": "^0.0.6",
     "@nestjs/common": "11.0.12",
     "@nestjs/config": "4.0.1",
     "@nestjs/core": "11.0.12",
