--- a/.github/workflows/docker-e2e.yml
+++ b/.github/workflows/docker-e2e.yml
@@ -1,10 +1,17 @@
 name: NestJS API CI
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+  workflow_dispatch:
+    inputs:
+      database_type:
+        description: 'Database type to test (all, relational, document)'
+        required: true
+        default: 'relational'
+        type: choice
+        options:
+          - all
+          - relational
+          - document
 
 jobs:
   build:
@@ -16,6 +23,7 @@ jobs:
       # <database-relational-block>
       - name: Run e2e tests for NestJS with TypeORM
         id: relational
+        if: ${{ inputs.database_type == 'relational' || inputs.database_type == 'all' }}
         run: docker compose -f docker-compose.relational.ci.yaml --env-file env-example-relational -p ci-relational up --build --exit-code-from api
 
       - name: Copy prod.log from container to host
@@ -26,6 +34,7 @@ jobs:
       # <database-document-block>
       - name: Run e2e tests for NestJS with Mongoose
         id: document
+        if: ${{ inputs.database_type == 'document' || inputs.database_type == 'all' }}
         run: docker compose -f docker-compose.document.ci.yaml --env-file env-example-document -p ci-document up --build --exit-code-from api
 
       - name: Copy prod.log from container to host
